# fastapi_CI

./: .flake8  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
src/: db.py  main.py
src/databases/: alembic.ini
src/databases/migration/versions/: cdaa1c373ee5_create_items_table.py
src/models/: item.py
src/routers/: item.py
src/schemas/: item.py
tests/: conftest.py  conftest_ci.py  test_item.py
tests/databases/: databases.py  databases_ci.py
